# protonmail-api-client

./: .gitignore  README.md  manifest.in  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
protonmail/: client.py  logger.py  models.py  pgp.py
protonmail/utils/: _pysrp.py  constants.py  openpgp.html  openpgp.js  pysrp.py  utils.py
src/protonmail/: __init__.py  client.py  constants.py  exceptions.py  logger.py  models.py  pgp.py
src/protonmail/utils/: captcha_auto_solver_utils.py  openpgp.html  pysrp.py  script.js  utils.py
tests/: test_registration.py
